Remove background images

--- a/src/components/ContactDesign.css
+++ b/src/components/ContactDesign.css
@@ -28,7 +28,7 @@
 }
 
 .main {
-    background-image: url(../images/fifa1.png);
+    /* background-image: url(../images/fifa1.png); */
     background-size: cover;
 }
 
